<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_posts">New posts</string>
    <string name="menu_save">save</string>
    <string name="clear">Clear</string>
    <string name="pick_error">Photo pick error</string>
    <string name="post_img_attachment">post img attachment</string>
    <string name="post_img">post img</string>
    <string name="authorize">Authorize</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_butt">Login</string>
    <string name="logOut">Are you sure you want to quit?</string>
    <string name="loginQ">Do You want to login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="add_avatar">Add avatar</string>
    <string name="not_match">Passwords don\'t match</string>
    <string name="signed_in">you are signed up as</string>
    <string name="wrong_pas_login">wrong login or password</string>
    <string name="error_registr">Error, try again!</string>
    <string name="logged_in">you are logged in as</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="last_week">Last week</string>
    <string name="unknown_day">unknown day</string>
</resources>